--- a/css/estilos.css
+++ b/css/estilos.css
@@ -17,7 +17,7 @@ body{
     cursor: pointer;
 }
 
-#mensaje {
+.mensajeCarro{
     position: absolute;
     left: 1050px;
     top: 230px;
@@ -56,6 +56,15 @@ body{
 
 #hueco {
     height: 150px;
+}
+
+#hueco #productoAgotado {
+    font-size: 50px;
+    position: absolute;
+    margin-left: 450px;
+    visibility: hidden;
+    z-index: 1;
+    background-color:rgba(255,0,0,0.3);
 }
 
 .producto {
